--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -11,14 +11,13 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="109dp"
-            android:layout_alignParentStart="true"
+            android:layout_width="174dp"
+            android:layout_height="122dp"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="11dp"
             android:textAlignment="textStart"
             android:textColor="@android:color/background_dark"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,10 +27,11 @@
 
         <TextView
             android:id="@+id/tv_price"
-            android:layout_width="188dp"
+            android:layout_width="174dp"
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginStart="13dp"
             android:textAlignment="textEnd"
             android:textColor="@android:color/background_dark"
             android:textSize="24sp"
@@ -46,7 +46,7 @@
 
     <ImageView
         android:id="@+id/item_iv"
-        android:layout_width="match_parent"
+        android:layout_width="176dp"
         android:layout_height="181dp"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
