--- a/app/src/main/res/layout/activity_get_image.xml
+++ b/app/src/main/res/layout/activity_get_image.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".get_image">
+    tools:context=".DownloadCatalog">
 
 </android.support.constraint.ConstraintLayout>
