--- a/common/src/main/res/layout/customlayout.xml
+++ b/common/src/main/res/layout/customlayout.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="205dp"
-        android:layout_height="81dp"
+        android:layout_height="112dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="13dp"
@@ -47,7 +47,7 @@
         android:layout_alignParentEnd="true"
         android:gravity="center_vertical|center_horizontal"
         android:textAlignment="gravity"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#d0e628"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +56,35 @@
         app:layout_constraintStart_toEndOf="@+id/item_iv"
         app:layout_constraintTop_toBottomOf="@+id/tv_name"
         app:layout_constraintVertical_bias="0.077" />
+
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="132dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/edit_btn"
+        android:layout_marginStart="22dp"
+        android:background="@drawable/delete"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="125dp"
+        android:layout_height="36dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="43dp"
+        android:layout_marginTop="195dp"
+        android:background="@drawable/edit" />
+
+    <TextView
+        android:id="@+id/id_tv"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:visibility="visible" />
 
 
 </RelativeLayout>
