--- a/shopconsole/src/main/res/layout/activity_add_item.xml
+++ b/shopconsole/src/main/res/layout/activity_add_item.xml
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/price_et"
         app:layout_constraintVertical_bias="0.17" />
 
     <Button
@@ -56,5 +56,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />
 </android.support.constraint.ConstraintLayout>
