refactor to common modole

--- a/common/src/main/res/layout/activity_list_view.xml
+++ b/common/src/main/res/layout/activity_list_view.xml
@@ -19,14 +19,28 @@
 
     <Button
         android:id="@+id/add_item_btn"
-        android:layout_width="226dp"
+        android:layout_width="180dp"
         android:layout_height="40dp"
         android:background="@drawable/add_item"
         android:onClick="onAddBtnClick"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listView"
         app:layout_constraintVertical_bias="0.857" />
+
+    <Button
+        android:id="@+id/notification_btn"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:background="@drawable/notification_button"
+        android:onClick="notificationBtnOnClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/listView"
+        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintStart_toEndOf="@+id/listView"
+        app:layout_constraintTop_toBottomOf="@+id/listView"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
